adaptive 2 pages blog done

--- a/src/_html/_base/_includes/_blog.html
+++ b/src/_html/_base/_includes/_blog.html
@@ -1,7 +1,7 @@
 <div class="container-fluid blog">
     <div class="container">
         <div class="row">
-            <div class="col-8">
+            <div class="col-md-8 col-sm-7 col-12">
                 <ul class="nav">
                     <li class="nav-item">
                       <a class="nav-link" aria-current="page" href="../../../blog_pages1.html">Latest</a>
@@ -39,7 +39,8 @@
                         <p class="data"><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p>
                         <img src="../../../assets/img/woman-phone.jpg" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia suscipit voluptatibus nesciunt, cumque saepe eos quae. Fuga ratione assumenda, temporibus saepe, vero soluta reprehenderit quas a blanditiis non aspernatur asperiores, aut modi! Eligendi, nobis temporibus ad officia atque recusandae earum ex quae vitae similique ullam eos vel necessitatibus quas veritatis?</p>
-                        <a class="continue-reading" href="../../../blog_pages1.html">Continue reading <i class="bi bi-caret-right-fill"></i></a>
+                        <a class="continue-reading" href="../../../blog_pages3.html">Continue reading</a>
+                        <a class="continue-reading-img" href="../../../blog_pages3.html"><i class="bi bi-caret-right-fill"></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -62,7 +63,8 @@
                         <p class="data"><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p>
                         <img src="../../../assets/img/woman-phone2.png" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia suscipit voluptatibus nesciunt, cumque saepe eos quae. Fuga ratione assumenda, temporibus saepe, vero soluta reprehenderit quas a blanditiis non aspernatur asperiores, aut modi! Eligendi, nobis temporibus ad officia atque recusandae earum ex quae vitae similique ullam eos vel necessitatibus quas veritatis?</p>
-                        <a class="continue-reading" href="../../../blog_pages2.html">Continue reading <i class="bi bi-caret-right-fill"></i></a>
+                        <a class="continue-reading" href="../../../blog_pages3.html">Continue reading</a>
+                        <a class="continue-reading-img" href="../../../blog_pages3.html"><i class="bi bi-caret-right-fill"></i></a>
                     </div>
                 </div>
                 <div class="row">
@@ -85,9 +87,10 @@
                         <p class="data"><i class="bi bi-clock"></i> February 3, 2015 in Personal life</p>
                         <img src="../../../assets/img/woman-phone3.avif" alt="">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia suscipit voluptatibus nesciunt, cumque saepe eos quae. Fuga ratione assumenda, temporibus saepe, vero soluta reprehenderit quas a blanditiis non aspernatur asperiores, aut modi! Eligendi, nobis temporibus ad officia atque recusandae earum ex quae vitae similique ullam eos vel necessitatibus quas veritatis?</p>
-                        <a class="continue-reading" href="../../../blog_pages3.html">Continue reading <i class="bi bi-caret-right-fill"></i></a>
+                        <a class="continue-reading" href="../../../blog_pages3.html">Continue reading</a>
+                        <a class="continue-reading-img" href="../../../blog_pages3.html"><i class="bi bi-caret-right-fill"></i></a>
                         <hr>
-                        <ul class="pagination">
+                        <ul class="pagination d-none d-sm-flex">
                             <li><a class="page-link" href="#" aria-label="Previous">
                                 <span aria-hidden="true"><i class="bi bi-caret-left"></i></span></a>
                             </li>
@@ -104,10 +107,22 @@
                                 <span aria-hidden="true"><i class="bi bi-caret-right"></i></span></a>
                             </li>
                         </ul>
+                        <ul class="pagination d-flex d-sm-none ">
+                            <li><a class="page-link" href="#" aria-label="Previous">
+                                <span aria-hidden="true"><i class="bi bi-caret-left"></i></span></a>
+                            </li>
+                            <li><a class="page-link active-pag" href="../../../blog_pages1.html">1</a></li>
+                            <li><a class="page-link" href="../../../blog_pages2.html">2</a></li>
+                            <li><a class="page-link" href="../../../blog_pages3.html">3</a></li>
+                            <li><a class="page-link" href="#">4</a></li>
+                            <li><a class="page-link" href="../../../blog_pages1.html" aria-label="Next">
+                                <span aria-hidden="true"><i class="bi bi-caret-right"></i></span></a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
-            <div class="col-4 pages_howit">
+            <div class="col-md-4 col-sm-5 col-12 pages_howit">
                 <div class="right-column">
                     <div class="col-auto">
                         <label class="visually-hidden" for="autoSizingInputGroup">Search</label>
@@ -245,41 +260,43 @@
                     <button class="under-button">Place an order</button>
                     <h3>Discounts</h3>
                     <hr>
-                    <div class="wavy-circle wavy-circle1">
-                        <div class="circle"></div>
-                        <span>15%<br>OFF</span>
-                    </div>
-                    <div class="wavy-text">
-                        <p class="for">for the</p>
-                        <h5>1st order</h5>
-                        <hr class="grey">
-                    </div>
-                    <div class="wavy-circle wavy-circle2">
-                        <div class="circle"></div>
-                        <span>5%<br>OFF</span>
-                    </div>
-                    <div class="wavy-text">
-                        <p class="for">for more than</p>
-                        <h5>20 pages</h5>
-                        <hr class="grey">
-                    </div>
-                    <div class="wavy-circle wavy-circle3">
-                        <div class="circle"></div>
-                        <span>10%<br>OFF</span>
-                    </div>
-                    <div class="wavy-text">
-                        <p class="for">for more than</p>
-                        <h5>50 pages</h5>
-                        <hr class="grey">
-                    </div>
-                    <div class="wavy-circle wavy-circle4">
-                        <div class="circle"></div>
-                        <span>15%<br>OFF</span>
-                    </div>
-                    <div class="wavy-text">
-                        <p class="for">for more than</p>
-                        <h5>100 pages</h5>
-                        <hr class="grey">
+                    <div class="wavy-circle-main">
+                        <div class="wavy-circle wavy-circle1">
+                            <div class="circle"></div>
+                            <span>15%<br>OFF</span>
+                        </div>
+                        <div class="wavy-text">
+                            <p class="for">for the</p>
+                            <h5>1st order</h5>
+                            <hr class="grey">
+                        </div>
+                        <div class="wavy-circle wavy-circle2">
+                            <div class="circle"></div>
+                            <span>5%<br>OFF</span>
+                        </div>
+                        <div class="wavy-text">
+                            <p class="for">for more than</p>
+                            <h5>20 pages</h5>
+                            <hr class="grey">
+                        </div>
+                        <div class="wavy-circle wavy-circle3">
+                            <div class="circle"></div>
+                            <span>10%<br>OFF</span>
+                        </div>
+                        <div class="wavy-text">
+                            <p class="for">for more than</p>
+                            <h5>50 pages</h5>
+                            <hr class="grey">
+                        </div>
+                        <div class="wavy-circle wavy-circle4">
+                            <div class="circle"></div>
+                            <span>15%<br>OFF</span>
+                        </div>
+                        <div class="wavy-text">
+                            <p class="for">for more than</p>
+                            <h5>100 pages</h5>
+                            <hr class="grey">
+                        </div>
                     </div>
                     <button class="under-button">Place an order</button>
                 </div>
