--- a/src/_html/_base/_includes/_pages_howit.html
+++ b/src/_html/_base/_includes/_pages_howit.html
@@ -1,12 +1,12 @@
 <div class="container-fluid pages_howit">
     <div class="container">
         <div class="row">
-            <div class="col-8 left-column">
+            <div class="col-md-8 col-sm-7 col-12 left-column">
                 <h3>Our simple 4-step Procedure</h3>
                 <p>In the field of academic research and essay writing, BlueEssaySite ervice is recognized as one of the best. We offer high-quality essay papers, term papers, custom research papers, theses, dissertations and help with all types of assignments. Our promise of a top-notch essay writing service is one we keep.</p>
                 <p>The reason BlueEssaySite provides the best college essay writing service is that we only employ the most experienced and professional writers - those who understand the importance of providing high-quality essay writing help at a reasonable price.</p>
                 <div class="row steps">
-                    <div class="col-6">
+                    <div class="col-lg-6 col-12">
                         <div class="step step1">
                             <img src="../../../assets/img/03-img-1.png" alt="">
                             <h3>step 1</h3>
@@ -18,7 +18,7 @@
                             <p>The order you placed with our essay writing service is then sent to you before the deadline you set and is accompanied by several free-of-charge features.</p>
                         </div>
                     </div>
-                    <div class="col-6">
+                    <div class="col-lg-6 col-12">
                         <div class="step">
                             <img src="../../../assets/img/03-img-2.png" alt="">
                             <h3>step 2</h3>
@@ -32,7 +32,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-4 right-column">
+            <div class="col-md-4 col-sm-5 col-12 right-column">
                 <div class="col-auto">
                     <label class="visually-hidden" for="autoSizingInputGroup">Search</label>
                     <div class="input-group">
@@ -169,41 +169,43 @@
                 <button class="under-button">Place an order</button>
                 <h3>Discounts</h3>
                 <hr>
-                <div class="wavy-circle wavy-circle1">
-                    <div class="circle"></div>
-                    <span>15%<br>OFF</span>
-                </div>
-                <div class="wavy-text">
-                    <p class="for">for the</p>
-                    <h5>1st order</h5>
-                    <hr class="grey">
-                </div>
-                <div class="wavy-circle wavy-circle2">
-                    <div class="circle"></div>
-                    <span>5%<br>OFF</span>
-                </div>
-                <div class="wavy-text">
-                    <p class="for">for more than</p>
-                    <h5>20 pages</h5>
-                    <hr class="grey">
-                </div>
-                <div class="wavy-circle wavy-circle3">
-                    <div class="circle"></div>
-                    <span>10%<br>OFF</span>
-                </div>
-                <div class="wavy-text">
-                    <p class="for">for more than</p>
-                    <h5>50 pages</h5>
-                    <hr class="grey">
-                </div>
-                <div class="wavy-circle wavy-circle4">
-                    <div class="circle"></div>
-                    <span>15%<br>OFF</span>
-                </div>
-                <div class="wavy-text">
-                    <p class="for">for more than</p>
-                    <h5>100 pages</h5>
-                    <hr class="grey">
+                <div class="wavy-circle-main">
+                    <div class="wavy-circle wavy-circle1">
+                        <div class="circle"></div>
+                        <span>15%<br>OFF</span>
+                    </div>
+                    <div class="wavy-text">
+                        <p class="for">for the</p>
+                        <h5>1st order</h5>
+                        <hr class="grey">
+                    </div>
+                    <div class="wavy-circle wavy-circle2">
+                        <div class="circle"></div>
+                        <span>5%<br>OFF</span>
+                    </div>
+                    <div class="wavy-text">
+                        <p class="for">for more than</p>
+                        <h5>20 pages</h5>
+                        <hr class="grey">
+                    </div>
+                    <div class="wavy-circle wavy-circle3">
+                        <div class="circle"></div>
+                        <span>10%<br>OFF</span>
+                    </div>
+                    <div class="wavy-text">
+                        <p class="for">for more than</p>
+                        <h5>50 pages</h5>
+                        <hr class="grey">
+                    </div>
+                    <div class="wavy-circle wavy-circle4">
+                        <div class="circle"></div>
+                        <span>15%<br>OFF</span>
+                    </div>
+                    <div class="wavy-text">
+                        <p class="for">for more than</p>
+                        <h5>100 pages</h5>
+                        <hr class="grey">
+                    </div>
                 </div>
                 <button class="under-button">Place an order</button>
                 
